# Touche

./: CLAUDE.md  DIY.md  LICENCE  README.md
Archive/: README.md
Assembly_Guide/: README.md  (+5 more)
Code/client/: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini  prj.conf
Code/client/include/: config.h
Code/client/lib/PlayerConfig/src/: PlayerConfig.cpp  PlayerConfig.hpp
Code/client/lib/RGB_Led/src/: RGBLed.cpp  RGBLed.hpp
Code/client/lib/VirtualGround/src/: VirtualGround.cpp  VirtualGround.hpp
Code/client/lib/Weapon/src/: Weapon.cpp  Weapon.hpp
Code/client/lib/WeaponButton/src/: WeaponButton.cpp  WeaponButton.hpp
Code/client/src/: alive.c  alive.h  calibration.cpp  main.c  main.cpp
Code/client/src/button/: button.c  button.h
Code/client/src/mac_address/: mac_address.c  mac_address.h
Code/server/: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  app.overlay  platformio.ini  prj.conf
Code/server/include/: config.h
Code/server/lib/ActionManager/src/: ActionManager.cpp  ActionManager.hpp
Code/server/lib/Button/src/: Button.cpp  Button.hpp
Code/server/lib/Buzzer/src/: Buzzer.cpp  Buzzer.hpp
Code/server/lib/LedRing/src/: LedRing.cpp  LedRing.hpp
Code/server/lib/Potentiometer/src/: Potentiometer.cpp  Potentiometer.hpp
Code/server/lib/ServerConfig/src/: ServerConfig.cpp  ServerConfig.hpp
Code/server/src/: calibration.cpp  check_buttons.cpp  main.c  main.cpp
Code/server/src/actions_handler/: actions_handler.c  actions_handler.h
Code/server/src/buzzer/: buzzer.c  buzzer.h
Code/server/src/led_ring/: led_ring.c  led_ring.h
(+328 files in other folders)
